Fixed: Top bar move when have scrollbar

--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -37,3 +37,7 @@
 .date-white::-webkit-calendar-picker-indicator {
   filter: invert(1);
 }
+
+html {
+  overflow-y: scroll;
+}
